--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -1,3 +1,5 @@
+/* CSS Styles */
+
 * {
   box-sizing: border-box; }
 
@@ -7,7 +9,8 @@ body {
   font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 16px;
   line-height: 1.5;
-  color: #606c71; }
+  color: #606c71; 
+}
 
 a {
   color: #1e6bb8;
@@ -18,9 +21,9 @@ a {
 .btn {
   display: inline-block;
   margin-bottom: 1rem;
-  color: rgba(255, 255, 255, 0.7);
-  background-color: rgba(255, 255, 255, 0.08);
-  border-color: rgba(255, 255, 255, 0.2);
+  color: #FFFFFF;
+  background-color: transparent;
+  border-color: #FCFCFC;
   border-style: solid;
   border-width: 1px;
   border-radius: 0.3rem;
@@ -29,9 +32,9 @@ a {
     margin-left: 1rem; }
 
 .btn:hover {
-  color: rgba(255, 255, 255, 0.8);
+  color: #FFF;
   text-decoration: none;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: #a4c639;
   border-color: rgba(255, 255, 255, 0.3); }
 
 @media screen and (min-width: 64em) {
@@ -54,14 +57,18 @@ a {
       margin-left: 0; } }
 
 .page-header {
-  color: #fff;
+  color: #E2E2E2;
   text-align: center;
-  background-color: #159957;
-  background-image: linear-gradient(120deg, #155799, #159957); }
+  background-color: rgb(83, 83, 83);
+  background-image: #FFF; 
+  border-bottom: #a4c639 7px solid;
+  /* box-shadow: black 39px 3px; */
+  -webkit-box-shadow: 0px 13px 30px 0px rgba(0,0,0,0.18);  -moz-box-shadow: 0px 13px 30px 0px rgba(0,0,0,0.18);  box-shadow: 0px 13px 30px 0px rgba(0,0,0,0.18);
+}
 
 @media screen and (min-width: 64em) {
   .page-header {
-    padding: 5rem 6rem; } }
+    padding: 2rem 0rem; } }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .page-header {
@@ -77,7 +84,9 @@ a {
 
 @media screen and (min-width: 64em) {
   .project-name {
-    font-size: 3.25rem; } }
+    font-size: 4.25rem; 
+    margin-bottom: 30px;
+} }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .project-name {
@@ -112,7 +121,7 @@ a {
   margin-top: 2rem;
   margin-bottom: 1rem;
   font-weight: normal;
-  color: #159957; }
+  color: #a4c639; }
 .main-content p {
   margin-bottom: 1em; }
 .main-content code {
@@ -205,10 +214,12 @@ a {
 
 @media screen and (min-width: 64em) {
   .main-content {
-    max-width: 64rem;
+    max-width: 69rem;
     padding: 2rem 6rem;
     margin: 0 auto;
-    font-size: 1.1rem; } }
+    font-size: 1.1rem; 
+    /* background: white; */
+} }
 
 @media screen and (min-width: 42em) and (max-width: 64em) {
   .main-content {
